--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   "homepage": "https://github.com/matthewjohnmiller2020/HabitTracker#readme",
   "dependencies": {
     "express": "^4.17.3",
+    "pg": "^8.7.3",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
