--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
   },
   "homepage": "https://github.com/matthewjohnmiller2020/HabitTracker#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "concurrently": "^7.1.0",
     "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
